--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,9 @@ default = ["serde"]
 serde = { version = "1", optional = true }
 thiserror = "1"
 
+[dev-dependencies]
+pot = { version = "1.0.0-rc.3" }
+serde_json = "1"
+
 [workspace]
 members = ["xtask"]
