--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,10 +14,10 @@ jobs:
 
       - name: Build tests
         run: |
-          cargo test --all-features --all-targets --no-run
+          cargo test --all-features --no-run
 
       - name: Run unit tests
         run: |
-          cargo test --all-features --all-targets
+          cargo test --all-features
         env:
           RUST_BACKTRACE: 1
