--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "arc-bytes"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 description = "A reference-counted byte buffer."
 repository = "https://github.com/khonsulabs/arc-bytes"
@@ -22,3 +22,6 @@ serde_json = "1"
 
 [workspace]
 members = ["xtask"]
+
+[package.metadata.docs.rs]
+all-features = true
